--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ main {
 .tab-btn {
     font-family: 'JetBrains Mono', monospace; /* Ensures buttons use the specified font */
     padding: 10px 20px; /* Adds padding within each button */
-    margin: 0 10px; /* Adds spacing between buttons */
+    margin: 5px 10px; /* Adds spacing between buttons */
     cursor: pointer; /* Changes the cursor to a pointer on hover */
     background-color: var(--button-colour); /* Sets the button background color to dark grey */
     border: none; /* Removes the default border */
